--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,8 @@ body {
   justify-content: space-around;
 }
 .featured-img {
-  height: 3.5rem;
+  width: auto;
+  max-height: 3.5rem;
   filter: brightness(0);
   opacity: 50%;
 }
@@ -163,11 +164,14 @@ body {
   column-gap: 6.4rem;
 }
 .grid--2-cols {
+  display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
 .grid--3-cols {
+  display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
+
 .container {
   max-width: 120rem;
   margin: 0 auto;
@@ -346,5 +350,114 @@ body {
   margin-bottom: 3.2rem;
 }
 .section-testimonial {
+  display: grid;
   background-color: #fdf2e9;
+  grid-template-columns: 55fr 45fr;
+  align-items: center;
+}
+.testimonial-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+  margin-bottom: 1.6rem;
+}
+.testimonial-name {
+  font-size: 1.6rem;
+  color: #6f6f6f;
+}
+.testimonial {
+  line-height: 1.8;
+  font-size: 1.8rem;
+  font-weight: 400;
+  color: #555;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.testimonial-img {
+  width: 6.4rem;
+  border-radius: 50%;
+  margin-bottom: 1.2rem;
+}
+.testimonials-container {
+  padding: 9.6rem;
+}
+.testimonials {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 4.8rem;
+  column-gap: 8rem;
+}
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 1.6rem;
+  gap: 1.6rem;
+}
+.gallery-item {
+  overflow: hidden;
+}
+.gallery-item img {
+  display: block;
+  width: 100%;
+  transition: all 0.4s;
+}
+.gallery-item img:hover {
+  transform: scale(1.1);
+}
+.price-container {
+  max-width: 120rem;
+  margin: 0 auto;
+  padding: 0 3.2rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  justify-content: center;
+}
+
+.price-container h4 {
+  color: #cf711f;
+  font-weight: 600;
+  font-size: 2rem;
+  text-transform: uppercase;
+  letter-spacing: 0.75;
+  margin-bottom: 3.2rem;
+}
+.pricing-plan {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #51cf66;
+  padding: 4.6rem;
+  max-width: 70%;
+}
+.pricing-plan a {
+  margin-top: 5rem;
+}
+.price {
+  display: flex;
+  align-items: baseline;
+  font-size: 6.2rem;
+  font-weight: 600;
+  color: #333;
+  margin-bottom: 1.6rem;
+}
+.price span {
+  font-size: 3rem;
+  font-weight: 500;
+  margin-right: 0.8rem;
+}
+.plan-text {
+  font-size: 1.6rem;
+  line-height: 1.6;
+  color: #6f6f6f;
+  margin-bottom: 4rem;
+}
+.pricing-list-text {
+  display: flex;
+  font-size: 1.8rem;
+}
+.pricing-icon {
+  color: #e67e22;
+  display: block;
+  height: 2rem;
 }
