--- a/css/style.css
+++ b/css/style.css
@@ -174,8 +174,8 @@ body {
 
 .container {
   max-width: 120rem;
-  margin: 0 auto;
   padding: 0 3.2rem;
+  margin: 0 auto;
 }
 .center-text {
   text-align: center;
@@ -304,7 +304,7 @@ body {
   color: #333;
   font-size: 3.5rem;
 }
-.meal-list-text {
+.list-text {
   font-size: 1.9rem;
   font-weight: 400;
   color: #555;
@@ -312,7 +312,7 @@ body {
   align-items: center;
   gap: 2rem;
 }
-.meals-list {
+.list {
   list-style: none;
   display: flex;
   flex-direction: column;
@@ -404,47 +404,61 @@ body {
 .gallery-item img:hover {
   transform: scale(1.1);
 }
-.price-container {
+.pricing-container {
   max-width: 120rem;
   margin: 0 auto;
-  padding: 0 3.2rem;
+}
+.pricing-grid {
   display: grid;
+  column-gap: 6.4rem;
+  row-gap: 9.6rem;
   grid-template-columns: repeat(2, 1fr);
-  align-items: center;
-  justify-content: center;
+  margin-bottom: 9.6rem;
+}
+.section-pricing {
+  padding: 9.6rem 0;
+}
+.pricing-plan {
+  border-radius: 11px;
+
+  width: 75%;
+}
+.pricing-plan--starter {
+  justify-self: end;
+  border: solid 2px #fdf2e9;
+  padding: 4.6rem;
+}
+.pricing-plan--complete {
+  background-color: #fdf2e9;
+  padding: 4.8rem;
+  position: relative;
+  overflow: hidden;
+}
+.pricing-plan--complete::after {
+  content: "Best value";
+  position: absolute;
+  text-transform: uppercase;
+  top: 6%;
+  right: -18%;
+  font-size: 1.4rem;
+  font-weight: 700;
+  color: #333;
+  background-color: #ffd43b;
+  padding: 0.8rem 8rem;
+  transform: rotate(45deg);
 }
 
-.price-container h4 {
+.plan-header {
+  text-align: center;
+  margin-bottom: 4.8rem;
+}
+.plan-name {
   color: #cf711f;
   font-weight: 600;
-  font-size: 2rem;
+  font-size: 1.6rem;
   text-transform: uppercase;
   letter-spacing: 0.75;
   margin-bottom: 3.2rem;
-}
-.pricing-plan {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #51cf66;
-  padding: 4.6rem;
-  max-width: 70%;
-}
-.pricing-plan a {
-  margin-top: 5rem;
-}
-.price {
-  display: flex;
-  align-items: baseline;
-  font-size: 6.2rem;
-  font-weight: 600;
-  color: #333;
-  margin-bottom: 1.6rem;
-}
-.price span {
-  font-size: 3rem;
-  font-weight: 500;
-  margin-right: 0.8rem;
 }
 .plan-text {
   font-size: 1.6rem;
@@ -452,12 +466,111 @@ body {
   color: #6f6f6f;
   margin-bottom: 4rem;
 }
-.pricing-list-text {
-  display: flex;
-  font-size: 1.8rem;
+.plan-price {
+  font-size: 6.2rem;
+  font-weight: 600;
+  color: #333;
+  margin-bottom: 1.6rem;
 }
-.pricing-icon {
+.plan-price span {
+  font-size: 3rem;
+  font-weight: 500;
+  margin-right: 0.8rem;
+}
+.btn-price {
+  font-size: 2rem;
+  display: inline-block;
+
+  justify-content: center;
+  padding: 1.6rem 3.2rem;
+  text-decoration: none;
+  border-radius: 0.5rem;
+  font-weight: 600;
+  color: #555;
+  background-color: #e67e22;
+  color: white;
+}
+.plan-sing-up {
+  text-align: center;
+  margin-top: 4.8rem;
+}
+.plan-grid {
+  display: grid;
+  row-gap: 9.6rem;
+  column-gap: 6.4rem;
+  margin-bottom: 9.6rem;
+}
+.features-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 4rem;
+}
+.feature-title {
+  font-size: 2.4rem;
+  color: #333;
+  font-weight: 700;
+  margin-bottom: 1.6rem;
+}
+.plan-details {
+  font-size: 1.6rem;
+  line-height: 1.6;
+  text-align: center;
+}
+.feature-icon {
   color: #e67e22;
-  display: block;
-  height: 2rem;
+  height: 3rem;
+  width: 3rem;
+  margin-bottom: 3.2rem;
+  background-color: #fdf2e9;
+  padding: 1.6rem;
+  border-radius: 50%;
+}
+.feature-text {
+  font-size: 1.9rem;
+  font-weight: 400;
+  color: #555;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  line-height: 1.7;
+}
+.cta-container {
+  height: 50rem;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  background-color: #e67e22;
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
+  background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
+  border-radius: 11px;
+  overflow: hidden;
+}
+.cta-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+  margin-bottom: 4.8rem;
+}
+
+.cta-text-box {
+  padding: 4.8rem 6.4rem 6.4rem 6.4rem;
+  color: #45260a;
+}
+.cta-container .heading-secondary {
+  color: #45260a;
+  margin-bottom: 3.2rem;
+}
+.cta-img-box {
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(235, 150, 76, 0.35),
+      rgba(231, 126, 35, 0.35)
+    ),
+    url(../img/eating.jpg);
+  background-size: cover;
+  background-position: center;
+}
+.cta-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 3.2;
+  row-gap: 2.4rem;
 }
