--- a/css/style.css
+++ b/css/style.css
@@ -247,11 +247,6 @@ body {
   border-radius: 50%;
   z-index: -1;
 }
-.container-meals {
-  max-width: 120rem;
-  margin: 0 auto;
-  padding: 0 3.2rem;
-}
 .meal {
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
   border-radius: 10px;
@@ -329,8 +324,8 @@ body {
 }
 
 .meal-icons {
-  max-height: 2.8rem;
-  max-width: 2.8rem;
+  height: 3rem;
+  width: 3rem;
 
   color: #e67e22;
 }
@@ -403,10 +398,6 @@ body {
 }
 .gallery-item img:hover {
   transform: scale(1.1);
-}
-.pricing-container {
-  max-width: 120rem;
-  margin: 0 auto;
 }
 .pricing-grid {
   display: grid;
@@ -534,8 +525,10 @@ body {
   gap: 2rem;
   line-height: 1.7;
 }
+.section-cta {
+  padding: 4.8rem 0 12.8rem 0;
+}
 .cta-container {
-  height: 50rem;
   display: grid;
   grid-template-columns: 2fr 1fr;
   background-color: #e67e22;
@@ -555,7 +548,7 @@ body {
   color: #45260a;
 }
 .cta-container .heading-secondary {
-  color: #45260a;
+  color: inherit;
   margin-bottom: 3.2rem;
 }
 .cta-img-box {
@@ -568,9 +561,115 @@ body {
   background-size: cover;
   background-position: center;
 }
+*:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
+}
 .cta-form {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  column-gap: 3.2;
+  column-gap: 3.2rem;
   row-gap: 2.4rem;
+}
+.cta-form label {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 500;
+  margin-bottom: 1.2rem;
+}
+.cta-form input,
+.cta-form select {
+  width: 100%;
+  padding: 1.2rem;
+  font-size: 1.8rem;
+  font-family: inherit;
+  border: none;
+  background-color: #fdf2e9;
+  border-radius: 9px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+.cta-form input::placeholder {
+  color: #aaa;
+}
+
+.cta-form button {
+  padding: 1.2rem 3.6rem;
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  transition: all 0.3s;
+}
+.cta-form button:hover {
+  background-color: #fff;
+  color: #555;
+}
+.cta-container *:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
+}
+.footer {
+  padding: 12.8rem 0;
+  border-top: solid 1px #dfdcdc;
+}
+.footer-grid {
+  display: grid;
+  grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
+  column-gap: 6.4rem;
+  row-gap: 9.6rem;
+}
+.logo-col {
+  display: flex;
+  flex-direction: column;
+}
+.footer-logo {
+  display: block;
+  margin-bottom: 3.2rem;
+}
+.social-links {
+  display: flex;
+  gap: 2.4rem;
+  list-style: none;
+}
+.social-icon {
+  height: 2.4rem;
+  width: 2.4rem;
+}
+.copyright {
+  font-size: 1.4rem;
+  color: #767676;
+  margin-top: auto;
+}
+.footer-heading {
+  font-size: 1.6rem;
+  font-weight: 500;
+  margin-bottom: 4rem;
+}
+.contacts {
+  font-style: normal;
+  font-size: 1.6rem;
+  line-height: 1.6;
+  color: #555;
+}
+.adress {
+  margin-bottom: 2.4rem;
+}
+.footer-nav {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+}
+.footer-link:link,
+.footer-link:visited {
+  text-decoration: none;
+  font-size: 1.6rem;
+  color: #767676;
+  transition: all 0.3s;
+}
+.footer-link:hover,
+.footer-link:active {
+  color: #555;
 }
