improving code organization and adding general css. starting with responsiveness

--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,9 @@ body {
 }
 
 .hero {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
   margin: 0 auto;
   max-width: 130rem;
   align-items: center;
-  gap: 3.3rem;
   padding: 0 3.2rem;
 }
 .hero-img {
@@ -45,15 +42,15 @@ body {
 }
 .btn,
 .btn-start {
+  border: none;
   margin-right: 1rem;
   font-size: 2rem;
   display: inline-block;
-
   justify-content: center;
   background-color: white;
   padding: 1.6rem 3.2rem;
   text-decoration: none;
-  border-radius: 0.5rem;
+  border-radius: 9px;
   font-weight: 600;
   color: #555;
 }
@@ -62,10 +59,6 @@ body {
 }
 .btn-start:hover {
   background-color: #cf711f;
-}
-.orange {
-  background-color: #e67e22;
-  color: white;
 }
 .custumers-box {
   display: flex;
@@ -100,7 +93,7 @@ body {
   font-weight: 600;
 }
 .logo {
-  height: 2.4rem;
+  height: 2.2rem;
 }
 .main-nav-list {
   display: flex;
@@ -158,29 +151,6 @@ body {
 .section-meals {
   padding: 9.6rem 0;
 }
-.grid {
-  display: grid;
-  row-gap: 9.6rem;
-  column-gap: 6.4rem;
-}
-.grid--2-cols {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-}
-.grid--3-cols {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.container {
-  max-width: 120rem;
-  padding: 0 3.2rem;
-  margin: 0 auto;
-}
-.center-text {
-  text-align: center;
-}
-
 #app--img {
   width: 35%;
 }
@@ -259,7 +229,7 @@ body {
 .meal-content {
   padding: 3.2rem 4.8rem 4.8rem 4.8rem;
 }
-.tag {
+.container-tag {
   display: flex;
 }
 .vegetarian-tag {
@@ -300,7 +270,7 @@ body {
   font-size: 3.5rem;
 }
 .list-text {
-  font-size: 1.9rem;
+  font-size: 1.8rem;
   font-weight: 400;
   color: #555;
   display: flex;
@@ -315,22 +285,16 @@ body {
 }
 .see-all:visited,
 .see-all:link {
-  font-size: 2rem;
+  font-size: 1.8rem;
   color: #e67e22;
 }
 .see-all:hover {
-  font-size: 2rem;
   color: #cf711f;
 }
-
 .meal-icons {
   height: 3rem;
   width: 3rem;
-
   color: #e67e22;
-}
-.margin-bottom-md {
-  margin-bottom: 6rem;
 }
 .meal-img {
   border-radius: 10px 10px 0 0;
@@ -345,10 +309,10 @@ body {
   margin-bottom: 3.2rem;
 }
 .section-testimonial {
-  display: grid;
   background-color: #fdf2e9;
   grid-template-columns: 55fr 45fr;
   align-items: center;
+  display: grid;
 }
 .testimonial-text {
   font-size: 1.8rem;
@@ -366,7 +330,6 @@ body {
   color: #555;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
 }
 .testimonial-img {
   width: 6.4rem;
@@ -375,16 +338,16 @@ body {
 }
 .testimonials-container {
   padding: 9.6rem;
+  max-width: 120rem;
+  margin: 0 auto;
 }
 .testimonials {
   display: grid;
-  grid-template-columns: 1fr 1fr;
   row-gap: 4.8rem;
   column-gap: 8rem;
 }
 .gallery {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
   padding: 1.6rem;
   gap: 1.6rem;
 }
@@ -399,13 +362,6 @@ body {
 .gallery-item img:hover {
   transform: scale(1.1);
 }
-.pricing-grid {
-  display: grid;
-  column-gap: 6.4rem;
-  row-gap: 9.6rem;
-  grid-template-columns: repeat(2, 1fr);
-  margin-bottom: 9.6rem;
-}
 .section-pricing {
   padding: 9.6rem 0;
 }
@@ -419,6 +375,7 @@ body {
   border: solid 2px #fdf2e9;
   padding: 4.6rem;
 }
+
 .pricing-plan--complete {
   background-color: #fdf2e9;
   padding: 4.8rem;
@@ -440,7 +397,6 @@ body {
 }
 
 .plan-header {
-  text-align: center;
   margin-bottom: 4.8rem;
 }
 .plan-name {
@@ -471,7 +427,6 @@ body {
 .btn-price {
   font-size: 2rem;
   display: inline-block;
-
   justify-content: center;
   padding: 1.6rem 3.2rem;
   text-decoration: none;
@@ -481,19 +436,16 @@ body {
   background-color: #e67e22;
   color: white;
 }
+.btn-price:hover {
+  font-size: 2rem;
+  background-color: #cf711f;
+}
 .plan-sing-up {
   text-align: center;
   margin-top: 4.8rem;
 }
-.plan-grid {
-  display: grid;
-  row-gap: 9.6rem;
-  column-gap: 6.4rem;
-  margin-bottom: 9.6rem;
-}
 .features-grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
   gap: 4rem;
 }
 .feature-title {
@@ -593,14 +545,11 @@ body {
 }
 
 .cta-form button {
-  padding: 1.2rem 3.6rem;
-  border: none;
-  cursor: pointer;
-  font-family: inherit;
   background-color: #45260a;
   color: #fdf2e9;
   align-self: end;
-  transition: all 0.3s;
+  padding: 1.2rem;
+  margin: 0;
 }
 .cta-form button:hover {
   background-color: #fff;
@@ -615,10 +564,7 @@ body {
   border-top: solid 1px #dfdcdc;
 }
 .footer-grid {
-  display: grid;
   grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
-  column-gap: 6.4rem;
-  row-gap: 9.6rem;
 }
 .logo-col {
   display: flex;
@@ -641,11 +587,13 @@ body {
   font-size: 1.4rem;
   color: #767676;
   margin-top: auto;
+  line-height: 1.6;
 }
 .footer-heading {
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   font-weight: 500;
   margin-bottom: 4rem;
+  color: #555;
 }
 .contacts {
   font-style: normal;
