adding more media queries and starting with js

--- a/css/general.css
+++ b/css/general.css
@@ -29,8 +29,31 @@
 .margin-bottom-mp {
   margin-bottom: 9.6rem;
 }
+.margin-right-sm {
+  margin-right: 1.6rem !important;
+}
 
 /*Text*/
+.heading-primary {
+  font-size: 5.2rem;
+  color: #333;
+  margin-bottom: 3.2rem;
+}
+.heading-secondary {
+  font-size: 4.5rem;
+  color: #333;
+  font-weight: 700;
+  margin-bottom: 9.6rem;
+}
+.subheading {
+  display: block;
+  color: #e67e22;
+  font-size: 1.6rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 0.75px;
+  margin-bottom: 1.6rem;
+}
 .orange {
   background-color: #e67e22;
   color: white;
