--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 html {
   font-size: 62.5%;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 * {
   padding: 0;
@@ -27,25 +28,16 @@ body {
 .hero-img {
   width: 100%;
 }
-.hero-text {
-  display: flex;
-  flex-direction: column;
-  gap: 4rem;
-}
-.title {
-  font-size: 5.2rem;
-  color: #333;
-}
+
 .description {
-  color: #888;
-  font-size: 2.1rem;
-  line-height: 1.5;
-  font-weight: 500;
+  font-size: 2rem;
+  line-height: 1.6;
+  margin-bottom: 4.8rem;
+  color: #555;
 }
 .btn,
 .btn-start {
   border: none;
-  margin-right: 1rem;
   font-size: 2rem;
   display: inline-block;
   justify-content: center;
@@ -57,7 +49,9 @@ body {
   color: #555;
 }
 .btn:hover {
-  background-color: #f8f9fa;
+  background-color: #fdf2e9;
+  outline: 3px solid rgb(255, 255, 255);
+  outline-offset: -3px;
 }
 .btn-start:hover {
   background-color: #cf711f;
@@ -65,19 +59,26 @@ body {
 .custumers-box {
   display: flex;
   align-items: center;
-  margin-top: 6rem;
+  gap: 1.6rem;
+  margin-top: 8rem;
+}
+.custumers-img {
+  display: flex;
 }
 .custumers {
-  width: 4.6rem;
-  margin-right: -1.6rem;
+  height: 4.8rem;
+  width: 4.8rem;
   border-radius: 50%;
+  margin-right: -1.6rem;
+  border: 3px solid #fdf2e9;
+}
+.custumers-img img:last-child {
+  margin: 0;
 }
 .custumers-text {
-  margin-left: 3.4rem;
-  display: inline-block;
-  font-size: 17px;
+  font-size: 1.8rem;
+  font-weight: 600;
   color: #333;
-  font-weight: 1000;
 }
 .orange-text {
   color: #e67e22;
@@ -129,6 +130,7 @@ body {
   background-color: #cf711f;
 }
 .btn-mobile-nav {
+  z-index: 1000;
   border: none;
   background: none;
   cursor: pointer;
@@ -170,21 +172,7 @@ body {
 #app--img {
   width: 35%;
 }
-.subheading {
-  display: block;
-  color: #e67e22;
-  font-size: 1.6rem;
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: 0.75px;
-  margin-bottom: 1.6rem;
-}
-.heading-secondary {
-  font-size: 4.5rem;
-  color: #333;
-  font-weight: 700;
-  margin-bottom: 9.6rem;
-}
+
 .step-text-box {
   display: flex;
   flex-direction: column;
@@ -388,7 +376,6 @@ body {
 }
 .pricing-plan {
   border-radius: 11px;
-
   width: 75%;
 }
 .pricing-plan--starter {
@@ -419,6 +406,9 @@ body {
 
 .plan-header {
   margin-bottom: 4.8rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .plan-name {
   color: #cf711f;
@@ -429,6 +419,7 @@ body {
   margin-bottom: 3.2rem;
 }
 .plan-text {
+  text-align: center;
   font-size: 1.6rem;
   line-height: 1.6;
   color: #6f6f6f;
