Qualidade das imagens foi aumentada. favicon adicionado alem da barra de navegacao. Primeira versao do ominifood finalizada.

--- a/css/queries.css
+++ b/css/queries.css
@@ -206,4 +206,16 @@
     height: 32rem;
     grid-row: 1;
   }
+  .pricing-plan {
+    width: 85%;
+    justify-self: center;
+  }
+  .meal {
+    width: 85%;
+    justify-self: center;
+  }
+  .cta-container {
+    width: 94%;
+    margin: auto;
+  }
 }
