--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ body {
 }
 .btn:hover {
   background-color: #fdf2e9;
-  outline: 3px solid rgb(255, 255, 255);
+  outline: 3px solid rgba(255, 255, 255, 0.748);
   outline-offset: -3px;
 }
 .btn-start:hover {
@@ -144,6 +144,24 @@ body {
 .icon-mobile-nav[name="close-outline"] {
   display: none;
 }
+
+.sticky .header {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.97);
+  z-index: 999;
+  height: 8rem;
+  padding-bottom: 0;
+  padding-top: 0;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+}
+
+.sticky .hero-section {
+  margin-top: 9.6rem;
+}
+
 .section-feature {
   padding: 4.8rem 0 3.2rem 0;
 }
